--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,9 +2,8 @@ site_name: sappy
 site_description: Single-page application server for end-to-end testing.
 site_author: Jace Browning
 repo_url: https://github.com/jacebrowning/sappy
-# google_analytics: ['XX-XXXXXXXX-XX', 'auto']
 
-theme: mkdocs
+theme: readthedocs
 
 pages:
 - Home: index.md
