--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,8 @@ theme: readthedocs
 
 pages:
 - Home: index.md
+- Command-line Interface: cli.md
 - About:
-  - 'Release Notes': about/changelog.md
+  - Release Notes: about/changelog.md
   - Contributing: about/contributing.md
   - License: about/license.md
