--- a/.pylintrc
+++ b/.pylintrc
@@ -1,12 +1,18 @@
 [MESSAGES CONTROL]
 
-disable=locally-disabled,fixme,too-few-public-methods,too-many-public-methods,invalid-name,global-statement,too-many-ancestors
+disable=locally-disabled,fixme,too-few-public-methods,too-many-public-methods,invalid-name,global-statement,too-many-ancestors,missing-docstring
 
 [FORMAT]
 
 max-line-length=80
 
 ignore-long-lines=^.*((https?:)|(pragma:)|(TODO:)).*$
+
+[SIMILARITIES]
+
+min-similarity-lines=4
+
+ignore-imports=yes
 
 [REPORTS]
 
