--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,6 +1,6 @@
 environment:
   global:
-    RANDOM_SEED: 12345
+    RANDOM_SEED: 0
   matrix:
     - PYTHON_MAJOR: 3
       PYTHON_MINOR: 5
@@ -13,9 +13,10 @@ install:
   - copy C:\MinGW\bin\mingw32-make.exe C:\MinGW\bin\make.exe
   - set PATH=%PATH%;C:\MinGW\bin
   - make --version
+  # Check system dependencies
+  - make doctor
   # Install project dependencies
-  - make env
-  - make depends
+  - make install
 
 build: off
 
