--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,32 @@
 language: python
 python:
-- 3.5
+  - 3.5
 
 cache:
   pip: true
   directories:
-  - env
+    - ~/virtualenv/python3.5.*
 
 env:
   global:
-  - RANDOM_SEED=12345
+    - RANDOM_SEED=0
+
+before_install:
+  - make doctor
 
 install:
-- pip install coveralls scrutinizer-ocular
-
-before_script:
-- make env
-- make depends
+  - make install
 
 script:
-- make check
-- make test
+  - make check
+  - make test
 
 after_success:
-- coveralls
-- ocular
+  - pip install coveralls scrutinizer-ocular
+  - coveralls
+  - ocular
 
 notifications:
   email:
     on_success: never
-    on_failure: change
+    on_failure: never
