--- a/.verchew.ini
+++ b/.verchew.ini
@@ -1,34 +1,29 @@
 [Make]
 
 cli = make
-
 version = GNU Make
-
 
 [Python]
 
 cli = python
-
 version = Python 3.
 
+[pipenv]
 
-[virtualenv]
-
-cli = virtualenv
-
-version = 15.
-
+cli = pipenv
+version = 8.2.6
 
 [pandoc]
 
 cli = pandoc
-
 version = 1.
-
+option = true
+message = This is only needed to generate the README for PyPI
 
 [Graphviz]
 
 cli = dot
 cli_version_arg = -V
-
 version = 2.
+optional = true
+message = This is only needed to generate UML diagrams for documentation
