--- a/.verchew.ini
+++ b/.verchew.ini
@@ -6,24 +6,17 @@ version = GNU Make
 [Python]
 
 cli = python
-version = Python 3.
+version = 3.5
 
-[pipenv]
+[Poetry]
 
-cli = pipenv
-versions = 10. | 11.
-
-[pandoc]
-
-cli = pandoc
-version = 1.
-optional = true
-message = This is only needed to generate the README for PyPI.
+cli = poetry
+version = 1
 
 [Graphviz]
 
 cli = dot
 cli_version_arg = -V
-version = 2.
+version = 2
 optional = true
 message = This is only needed to generate UML diagrams for documentation.
