--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -4,6 +4,12 @@ environment:
   matrix:
     - PYTHON_MAJOR: 3
       PYTHON_MINOR: 6
+    - PYTHON_MAJOR: 3
+      PYTHON_MINOR: 7
+    - PYTHON_MAJOR: 3
+      PYTHON_MINOR: 8
+    - PYTHON_MAJOR: 3
+      PYTHON_MINOR: 9
 
 cache:
   - .venv -> poetry.lock
