--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,8 +8,9 @@ environment:
       PYTHON_MINOR: 7
     - PYTHON_MAJOR: 3
       PYTHON_MINOR: 8
-    - PYTHON_MAJOR: 3
-      PYTHON_MINOR: 9
+    # TODO: Enable when Python 3.9 is available
+    # - PYTHON_MAJOR: 3
+    #   PYTHON_MINOR: 9
 
 cache:
   - .venv -> poetry.lock
