--- a/.pylint.ini
+++ b/.pylint.ini
@@ -73,6 +73,9 @@ disable=
     unsupported-delete-operation,
     too-many-nested-blocks,
     protected-access,
+    consider-using-f-string,
+    consider-using-with,
+    missing-timeout,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
