--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,2 +1,3 @@
 mkdocs==1.1.2 ; python_version >= "3.8" and python_version < "4.0"
 pygments==2.8.1 ; python_version >= "3.8" and python_version < "4.0"
+jinja2==2.11.3 ; python_version >= "3.8" and python_version < "4.0"
