--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 
 name = "sappy"
-version = "1.2b2"
+version = "1.2"
 description = "Single-page application server for end-to-end testing."
 
 license = "MIT"
